Fix alignment of sort icon in firefox

--- a/app/styles/forms.scss
+++ b/app/styles/forms.scss
@@ -363,4 +363,5 @@ input:-ms-input-placeholder {
 .sort-order-button {
   width:40px;
   font-size: 25px;
+  margin-top:-6px !important;
 }
