--- a/app/styles/overrides.scss
+++ b/app/styles/overrides.scss
@@ -147,6 +147,14 @@
 }
 
 /**
+ * Positioning
+ */
+
+.vtop {
+  vertical-align: top;
+}
+
+/**
  * Bottom gaps
  */
 
